# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: my_check.yml
page_analyzer/: app.py  url.py
page_analyzer/templates/: base.html  index.html  new_site.html  page.html  pages.html  site.html  site_list.html  start.html
